# kobe666

./: .gitignore  2026睿抗机器人开发者大赛(RAICOM)-全域安防作品技术报告模板.docx  README.md  readme.txt
raicom_safe_city_ws/: README.md
raicom_safe_city_ws/docs/: usage_guide.md  x_anylabeling_workflow.md  yolo_workflow.md
raicom_safe_city_ws/src/safe_city_bringup/: CMakeLists.txt  package.xml
raicom_safe_city_ws/src/safe_city_bringup/launch/: camera_demo.launch.py  demo.launch.py  mission_nav2_demo.launch.py  mission_nav_demo.launch.py  nav2.launch.py  sim.launch.py  slam.launch.py
raicom_safe_city_ws/src/safe_city_description/: CMakeLists.txt  package.xml
raicom_safe_city_ws/src/safe_city_description/launch/: display.launch.py
raicom_safe_city_ws/src/safe_city_description/rviz/: robot.rviz
raicom_safe_city_ws/src/safe_city_description/urdf/: safe_city_robot.urdf.xacro
raicom_safe_city_ws/src/safe_city_gazebo/: CMakeLists.txt  package.xml
raicom_safe_city_ws/src/safe_city_gazebo/launch/: camera_sim.launch.py  sim.launch.py
raicom_safe_city_ws/src/safe_city_gazebo/models/building_marker_10_board/: model.config  model.sdf
raicom_safe_city_ws/src/safe_city_gazebo/models/building_marker_11_board/: model.config  model.sdf
raicom_safe_city_ws/src/safe_city_gazebo/models/building_marker_8_board/: model.config  model.sdf
raicom_safe_city_ws/src/safe_city_gazebo/models/building_marker_9_board/: model.config  model.sdf
raicom_safe_city_ws/src/safe_city_gazebo/models/inspection_camera_bot/: model.sdf
raicom_safe_city_ws/src/safe_city_gazebo/models/people_marker_5_board/: model.config  model.sdf
raicom_safe_city_ws/src/safe_city_gazebo/models/people_marker_6_board/: model.config  model.sdf
raicom_safe_city_ws/src/safe_city_gazebo/models/people_marker_7_board/: model.config  model.sdf
raicom_safe_city_ws/src/safe_city_gazebo/models/trash_marker_1_board/: model.config  model.sdf
raicom_safe_city_ws/src/safe_city_gazebo/models/trash_marker_2_board/: model.config  model.sdf
raicom_safe_city_ws/src/safe_city_gazebo/models/trash_marker_3_board/: model.config  model.sdf
raicom_safe_city_ws/src/safe_city_gazebo/models/trash_marker_4_board/: model.config  model.sdf
raicom_safe_city_ws/src/safe_city_gazebo/worlds/: safe_city.world.sdf
raicom_safe_city_ws/src/safe_city_navigation/: CMakeLists.txt  package.xml
raicom_safe_city_ws/src/safe_city_navigation/config/: nav2_params.yaml  slam_toolbox_params.yaml  waypoints.yaml
raicom_safe_city_ws/src/safe_city_navigation/launch/: nav2.launch.py  slam.launch.py
raicom_safe_city_ws/src/safe_city_navigation/maps/: README.md  safe_city_map.pgm  safe_city_map.yaml
raicom_safe_city_ws/src/safe_city_navigation/scripts/: fake_localization_node.py  patrol_executor.py
raicom_safe_city_ws/src/safe_city_perception/: package.xml  setup.cfg  setup.py
raicom_safe_city_ws/src/safe_city_perception/config/: aruco_map.yaml  mission_plan.yaml  yolo_classes.yaml  zone_map.yaml
raicom_safe_city_ws/src/safe_city_perception/launch/: mission_demo.launch.py  mission_nav2.launch.py  mission_pipeline.launch.py  perception.launch.py  perception_mock_test.launch.py  perception_test.launch.py
raicom_safe_city_ws/src/safe_city_perception/resource/: safe_city_perception
raicom_safe_city_ws/src/safe_city_perception/safe_city_perception/: __init__.py  aruco_detector_node.py  mission_coordinator_node.py  mock_detection_publisher_node.py  patrol_nav_node.py  patrol_trigger_node.py  result_reporter_node.py  rotate_scan_node.py  test_image_publisher_node.py  yolo_detector_node.py  zone_trigger_demo_node.py
(+30 files in other folders)
