<?xml version="1.0"?>
<package format="3">
  <name>safe_city_bringup</name>
  <version>0.0.1</version>
  <description>Top-level launch files for the RAICOM safe city project.</description>
  <maintainer email="team@example.com">RAICOM Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>safe_city_description</exec_depend>
  <exec_depend>safe_city_gazebo</exec_depend>
  <exec_depend>safe_city_navigation</exec_depend>
  <exec_depend>safe_city_perception</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
