<?xml version="1.0"?>
<package format="3">
  <name>safe_city_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo world and simulation assets for the RAICOM safe city project.</description>
  <maintainer email="team@example.com">RAICOM Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>safe_city_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
