<?xml version="1.0"?>
<package format="3">
  <name>safe_city_navigation</name>
  <version>0.0.1</version>
  <description>Navigation and SLAM configuration for the RAICOM safe city project.</description>
  <maintainer email="team@example.com">RAICOM Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
