<?xml version="1.0"?>
<package format="3">
  <name>safe_city_perception</name>
  <version>0.0.1</version>
  <description>Perception nodes for YOLO and ArUco safe city inspection tasks.</description>
  <maintainer email="team@example.com">RAICOM Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
